--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 body {
   /* background-image: url('globe.jpeg'); */
   background-size: contain;
+  font-family: 'Lobster', cursive;
 }
 
 header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* background-color: tan; */
   height: 4rem;
 }
 
@@ -27,6 +27,15 @@ main {
 
 section {
   margin-top: 20px;
+  background-color: tan;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  border-radius: 4px 8px;
+  box-shadow: .3px .3px 5px;
 }
 
 .globe {
