--- a/style.css
+++ b/style.css
@@ -2,22 +2,17 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  /* background-image: url('globe.jpeg'); */
-  background-size: contain;
   font-family: 'Lobster', cursive;
 }
 
-header {
+.header {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 4rem;
 }
 
-main {
+.main {
   margin-top: 50px;
   display: flex;
   flex-direction: column;
@@ -25,7 +20,10 @@ main {
   align-items: center;
 }
 
-section {
+.section {
+  background-image: url('assets/map-airplane.jpg');
+  background-size: cover;
+  background-repeat: space no-repeat;
   margin-top: 20px;
   background-color: tan;
   display: flex;
@@ -33,7 +31,7 @@ section {
   flex-direction: column;
   align-items: center;
   width: 200px;
-  height: 200px;
+  height: 220px;
   border-radius: 4px 8px;
   box-shadow: .3px .3px 5px;
 }
